cloudtower-api-doc/markdown/zh/v1.8.0/schemas/EverouteLicenseWhereInput.md
| parameter | Type | Description |
| ----------- | ----------- |----------- |
| AND  |  object  |    |
| AND  |  array  |    |
| cloud_tower  |  object  |    |
| expire_date  |  string  |    |
| expire_date_gt  |  string  |    |
| expire_date_gte  |  string  |    |
| expire_date_in  |  string  |    |
| expire_date_in  |  array  |    |
| expire_date_lt  |  string  |    |
| expire_date_lte  |  string  |    |
| expire_date_not  |  string  |    |
| expire_date_not_in  |  string  |    |
| expire_date_not_in  |  array  |    |
| id  |  string  |    |
| id_contains  |  string  |    |
| id_ends_with  |  string  |    |
| id_gt  |  string  |    |
| id_gte  |  string  |    |
| id_in  |  string  |    |
| id_in  |  array  |    |
| id_lt  |  string  |    |
| id_lte  |  string  |    |
| id_not  |  string  |    |
| id_not_contains  |  string  |    |
| id_not_ends_with  |  string  |    |
| id_not_in  |  string  |    |
| id_not_in  |  array  |    |
| id_not_starts_with  |  string  |    |
| id_starts_with  |  string  |    |
| license_serial  |  string  |    |
| license_serial_contains  |  string  |    |
| license_serial_ends_with  |  string  |    |
| license_serial_gt  |  string  |    |
| license_serial_gte  |  string  |    |
| license_serial_in  |  string  |    |
| license_serial_in  |  array  |    |
| license_serial_lt  |  string  |    |
| license_serial_lte  |  string  |    |
| license_serial_not  |  string  |    |
| license_serial_not_contains  |  string  |    |
| license_serial_not_ends_with  |  string  |    |
| license_serial_not_in  |  string  |    |
| license_serial_not_in  |  array  |    |
| license_serial_not_starts_with  |  string  |    |
| license_serial_starts_with  |  string  |    |
| max_socket_num  |  integer  |    |
| max_socket_num_gt  |  integer  |    |
| max_socket_num_gte  |  integer  |    |
| max_socket_num_in  |  integer  |    |
| max_socket_num_in  |  array  |    |
| max_socket_num_lt  |  integer  |    |
| max_socket_num_lte  |  integer  |    |
| max_socket_num_not  |  integer  |    |
| max_socket_num_not_in  |  integer  |    |
| max_socket_num_not_in  |  array  |    |
| NOT  |  object  |    |
| NOT  |  array  |    |
| OR  |  object  |    |
| OR  |  array  |    |
| sign_date  |  string  |    |
| sign_date_gt  |  string  |    |
| sign_date_gte  |  string  |    |
| sign_date_in  |  string  |    |
| sign_date_in  |  array  |    |
| sign_date_lt  |  string  |    |
| sign_date_lte  |  string  |    |
| sign_date_not  |  string  |    |
| sign_date_not_in  |  string  |    |
| sign_date_not_in  |  array  |    |
| software_edition  |  object  |    |
| software_edition_in  |  object  |    |
| software_edition_in  |  array  |    |
| software_edition_not  |  object  |    |
| software_edition_not_in  |  object  |    |
| software_edition_not_in  |  array  |    |
| type  |  object  |    |
| type_in  |  object  |    |
| type_in  |  array  |    |
| type_not  |  object  |    |
| type_not_in  |  object  |    |
| type_not_in  |  array  |    |